--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,10 @@
 @import "./reset";
+@import "colors";
 @import "messages";
 @import "font-awesome-sprockets";
 @import "./font-awesome";
 @import "variable"; 
 @import "side-bar";
 @import "main-chat";
+@import "user";
+@import "flash";
