--- a/app/assets/stylesheets/_main-chat.scss
+++ b/app/assets/stylesheets/_main-chat.scss
@@ -73,7 +73,7 @@
         width: 100%;
         display: flex;
         position: relative;
-        .form{
+        .label{
           height: 50px;
           width: 100%;
         }
