--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -9,15 +9,22 @@
     = link_to "#" do
       .main-chat__top__edit-btn Edit
   .main-chat__center
+    = render @messages
     .main-chat__center__message 
       .main-chat__center__message__top
-        .main-chat__center__message__top__name 佐藤
-        %p.top__day 2020.1.20
-      %p.bottom text
-  .form
+        .main-chat__center__message__top__name 
+          = message.user.name
+        %p.top__day
+          = message.created_at.strftime("%Y年%m月%d日 %H時%M分")
+      %p.bottom
+        - if message.content.present?
+        %p.bottom__content
+          = message.content
+        = image_tag message.image.url, class: 'bottom__image' if message.image.present?
+  .main-chat__bottom
     = form_for [@group, @message] do |f|
       = f.text_field :content, class: 'form__message', placeholder: 'type a message'
-      .form__mask
+      .input-box
         = f.label :image, class: 'input-box__image' do
           = icon('fas', 'image', class: 'icon')
           = f.input-box__image__file :image, class: 'hidden'
@@ -35,11 +42,11 @@
 
 
 
-    -# %form.new-message
-    -#   .input-box
-    -#     %input{type: "text", class: ",input-box__text", placeholder: "type a message"}
-    -#     %label{class: "input-box__image"}
-    -#       = icon('far','image')
-    -#       %input{type: "file", class:"input-box__image__file"}
-    -#   %input{type: "submit", class:"submit-btn", value:"Send"}
+  -#   %form.new-message
+  -#     .input-box
+  -#       %input{type: "text", class: ",input-box__text", placeholder: "type a message"}
+  -#       %label{class: "input-box__image"}
+  -#         = icon('far','image')
+  -#         %input{type: "file", class:"input-box__image__file"}
+  -#     %input{type: "submit", class:"submit-btn", value:"Send"}
   
