sidebar message display

--- a/app/views/messages/_side_bar.html.haml
+++ b/app/views/messages/_side_bar.html.haml
@@ -16,6 +16,6 @@
       .group
         = link_to group_messages_path(group) do
           %p.group__name-space
-            group.name
+            = group.name
           %p.group__message-space
-            メッセージがまだありません。
+            = group.show_last_message
