--- a/app/assets/stylesheets/_main-chat.scss
+++ b/app/assets/stylesheets/_main-chat.scss
@@ -56,48 +56,52 @@
         }
       }
     
-      　.bottom{
+      // 　.bottom{
 
-        }
+      //   }
       }
     }
   
   &__bottom{
-    background-color: #d2d2d2;
-    height: 90px;
-    padding: 20px 40px;
-    form{
-      display: flex;
-      height: 50px;
-      .input-box{
-        width: 100%;
+    .form{
+      background-color: #d2d2d2;
+      height: 90px;
+      padding: 20px 40px;
+    }
+      .new_message{     
         display: flex;
-        position: relative;
-        .label{
+        .form__message{ 
           height: 50px;
           width: 100%;
+          padding: 0 40px 0 10px;
+          color: #434a54;
+          border-style: none;
         }
-        .input-box__image{ 
-          position: absolute;
-          top: 10px;
-          right: 10px;
-          font-size: 25px;
-          line-height: 20px;
+        .input-box__image{
           cursor: pointer;
-            .input-box__image__file{
-              display: none;
-            }
+          position: relative;
+          background-color: $main-white;
+          .far{
+          position: absolute;
+          top: 15px;
+          right: 10px;
+          font-size: 1.3rem;
+          }
         }
+        
+        .hidden{ 
+          display: none;
+        }   
+      } 
+      .submit-btn{
+        background-color: $main_blue;
+        width: 100px;
+        color: $main-white;
+        line-height: 50px;
+        height: 50px;
+        padding: 0 30px;
+        margin-left: 15px;
+        cursor: pointer;
       }
-    .submit-btn{
-      background-color: $main_blue;
-      color: $main-white;
-      line-height: 50px;
-      height: 50px;
-      padding: 0 30px;
-      margin-left: 15px;
-      cursor: pointer;
-    }
-   }
- }
+  }
 }
