--- a/app/views/messages/_main_chat.html.haml
+++ b/app/views/messages/_main_chat.html.haml
@@ -1,15 +1,18 @@
 .main-chat
   .main-chat__top
     .main-chat__top__left
-      .main-chat__top__left__gname グループ名
+      .main-chat__top__left__gname
+        = @group.name   
       %ul.member
         Member:
         %li.name
-          AAA
-    = link_to "#" do
+          - if @group.users
+            - @group.users.each do |u|
+              = u.name
+    = link_to edit_group_path(current_user) do
       .main-chat__top__edit-btn Edit
-  .main-chat__center
-    -# = render @messages
+  .main-chat__center 
+    = render @messages
   .main-chat__bottom
     .form
       = form_for [@group, @message] do |f|
